Різна стилізація в залежності від true / false

--- a/src/List.css
+++ b/src/List.css
@@ -1,5 +1,11 @@
 .content {
-    color: aliceblue;
-    background-color: palevioletred;
-    padding: 15px;
+    background-color: rgb(116, 216, 112);
 }
+.test {
+    background-color: peru;
+}
+article-description {
+    padding: 15px;
+    color: aliceblue;
+}
+
